# EDA-example

./: README.md
bus/: pyproject.toml  setup.py  test_topology.py  topology.yaml  topology_connector.py
bus/ebus/: adapter.py
scripts/: Dockerfile  build.sh
services/audit/: go.mod  main.go
services/datagen/: datagen.py  pyproject.toml
services/distribution/: distributor.py  pyproject.toml
services/processor/: processor.py  pyproject.toml
services/statistics/: memory.py  statistics.py  statistics.temp.py
